# space-x-prototype

./: .gitignore  LICENSE  README.md  manage.py  package.json  pnpm-lock.yaml  pyproject.toml
app/: data.py  settings.py  storages.py  urls.py  views.py
app/services/: apft.py  apft_standards.json  openai.py
app/static/js/: spacex-chat.js
app/static/js/helpers/: common.js  cookies.js
app/static_src/: package.json  tailwind.config.js
app/templatetags/: meta.py
assets/css/: styles.css
templates/: _bg.html  _chat.html  _intro.html  _response.html  _steps.html  chat.html
templates/layout/: _meta.html  base.html
templates/svg/: _astronaut.html  _calendar.html  _spaceship.html  _spacex_logo.html  _spacex_step_1.html  _spacex_step_2.html  _spacex_step_3.html  _spacex_step_4.html  _world_border.html
