[project]
name = "space-x-prototype"
version = "0.0.1"
description = "space-x-prototype"
dependencies = [
    "django>=5.0.7",
    "django-extensions>=3.2.3",
    "django-storages>=1.14.2",
    "django-tailwind[reload]>=3.8.0",
    "gunicorn>=21.2.0",
    "httptools>=0.6.1",
    "ipython>=8.22.2",
    "pillow>=10.2.0",
    "psycopg[binary]>=3.1.18",
    "requests>=2.31.0",
    "uvicorn>=0.29.0",
    "uvloop>=0.19.0",
]

readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
virtual = true
universal = true
dev-dependencies = [
    "black>=24.2.0",
    "ruff>=0.3.1",
    "django-debug-toolbar>=4.3.0",
    "djlint>=1.34.1",
    "freezegun>=1.4.0",
    "pre-commit>=3.6.2"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
norecursedirs = "assets static uploads .git node_modules htmlcov .tox .cache .pnpm-store"

[tool.ruff]
target-version = "py310"
fix = true
line-length = 100
lint.select = [
    "D",
    "E",
    "F",
    "W",
    "B",
    "I",
    "UP",
    "N",
    "B",
    "A",
    "C4",
    "ISC",
    "ICN",
    "T20",
    "C90",
    "PT",
    "PL",
    "Q",
    "RET",
    "SIM",
    "TID",
    "ERA",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PIE",
    "RUF",
]

lint.extend-ignore = [
    "A003",
    "RUF005",
    "N999",
    "D104",
    "D100",
    "D107",
    "D417",
    "D102",
    "D103",
    "D105",
    "D106",
]

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "node_modules",
    "migrations",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "bytes"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"models.py" = ["D101"]
"admin.py" = ["D101"]
"managers.py" = ["D101"]
"forms.py" = ["D101"]
"apps.py" = ["D101"]
"views.py" = ["D101"]
"sitemaps.py" = ["D101"]
"uvicorn_class.py" = ["D101", "RUF012"]
"data.py" = ["E501"]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py310']

[tool.djlint]
profile = "django"
use_gitignore = true
preserve_blank_lines = true
custom_blocks = "component_block,fill,slot"
blank_line_after_tag = "load,extends"
close_void_tags = false
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H016,H021,H023,H030,H031,H035,T002,T003"
max_line_length = 120
max_attribute_length = 100
no_function_formatting = true
